...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.main.MainActivity">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_full"
        android:hint="@string/search_title"
        android:inputType="text"
        android:drawableStart="@drawable/ic_search"
...
        android:background="@drawable/outline_curved"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginEnd="@dimen/margin_full"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtClose"
        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtClose"
        style="@style/TextStyleHeading"
...
