<resources>
    <string name="app_name">GIF Search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search GIFs</string>
    <string name="gif_detail">GIF Details</string>
    <string name="main_image">Main Image</string>
    <string name="random_gif">Random selected GIF:</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="copy_url">Copy Link</string>
    <string name="link_copied">Link Copied</string>
</resources>