<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        layout="@layout/layout_common_gif_detail"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/margin_full"
        android:layout_marginRight="@dimen/margin_full"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>