<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/detailLayout"
        layout="@layout/layout_common_gif_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnCopy"
        style="@style/TextStyleSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white_870"
        android:padding="@dimen/margin_full"
        android:textAlignment="center"
        android:text="@string/copy_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableTopCompat="@drawable/ic_content_copy"
        android:drawablePadding="@dimen/margin_small"/>

</androidx.constraintlayout.widget.ConstraintLayout>